# flappy-dot

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
art/: icon.xcf
art/Audio/: attributions.txt
art/Graphics/: Backgrounds.xcf  FlappyBird.xcf  Floor.xcf  Raw_Data.xcf  Sprite_Sheet.xcf  Text_Sheet.xcf  icon.xcf
include/gdk/: dynamic_text_renderer.h  event_bus.h  menu.h  screen.h  screen_stack.h  state_machine.h  static_text_renderer.h  text_map.h  text_renderer.h
include/jfc/: Background_0.png.h  Background_1.png.h  Background_2.png.h  Background_3.png.h  Background_4.png.h  Background_5.png.h  Background_6.png.h  Coins.ogg.h  Floor.png.h  POL_chubby_cat_short.ogg.h  Sprite_Sheet.png.h  Text_Sheet.png.h  assets.h  background.h  background_music_player.h  background_shader.h  bird.h  city.h  cloud.h  file_example_OOG_1MG.ogg.h  flappy_event_bus.h  flappy_image.png.h  flappy_screen.h  game.h  game_screen.h  icon.png.h  jump.ogg.h  jump_02.ogg.h  main_menu_screen.h  options_screen.h  pipe.h  screen.h  screen_stack.h  vgdeathsound.ogg.h
src/: assets.cpp  background.cpp  background_music_player.cpp  bird.cpp  city.cpp  cloud.cpp  control.cpp  dynamic_text_renderer.cpp  event_bus.cpp  flappy_event_bus.cpp  flappy_screen.cpp  game.cpp  game_screen.cpp  main.cpp  main_menu_screen.cpp  menu.cpp  options_screen.cpp  pipe.cpp  resources.cpp  screen.cpp  static_text_renderer.cpp  text_map.cpp  text_renderer.cpp
